--- a/styles/globals.css
+++ b/styles/globals.css
@@ -114,11 +114,12 @@ width: 100%;
 }
 .product-image{
   border-radius: 15px;
-  width: 250px;
-  height: 250px;
  background-color: #ebebeb;
   transform: scale(1, 1);
   transition: transform 0.5s ease;
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
 }
 
 .product-name{
