--- a/styles/globals.css
+++ b/styles/globals.css
@@ -349,10 +349,11 @@ padding: 20px 10px;
   padding: 20px;
 }
 .product .cart-product-image{
-  width:180px ;
+  width:150px ;
   height: 150px;
     border-radius: 15px;
  background-color: #ebebeb;
+ object-fit: cover;
 }
 .item-desc .flex{
   display: flex;
